--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
         </div>
       </div>
     </article>
-    
+
     <!-- diecinueve -->
       <!--Cambiar id por el numero de clase-->
       <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
@@ -1021,7 +1021,7 @@
             <header>
               <!--Apuntar al html con el nombre de la clase-->
               <h2>
-                <a href="sites/servicios.html">Red</a>
+                <a href="sites/servicios.html">Servicios</a>
               </h2>
               <!--Fecha de la clase-->
               <p class="info">04 de enero de 2021</p>
