--- a/sites/Servicios.html
+++ b/sites/Servicios.html
@@ -629,7 +629,7 @@
 	<div>
 
 		<a href="Notificaciones.html" style="float: left; background-color: black; padding: 1rem">Anterior</a>
-		<a href="segundoplano.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
+		<a href="process 2 plano.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
 	</div>
 	<!-- Footer -->
 	<footer id="footer">
