--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
           <li><a href="#diecinueve">Servicios</a></li>
           <li><a href="#veinte">Procesamiento en segundo plano</a></li>
           <li><a href="#veinteuno">Estado y alarmas</a></li>
+          <li><a href="#veintedos">Ubicación,GPS</a></li>
+          <li><a href="#veintetres">OsmDroid</a></li>
+          <li><a href="#veintecuatro">MapBox</a></li>
+          <li><a href="#veintecinco">Google Maps</a></li>
+          <li><a href="#veinteseis">Bluetooth</a></li>
+          <li><a href="#veintesiete">Touch-Screen</a></li>
+          <li><a href="#veinteocho">Sensores</a></li>
         </ol>
       </div>
     </section>
@@ -1003,6 +1010,7 @@
       </div>
     </article>
 
+
     <!-- diecinueve -->
       <!--Cambiar id por el numero de clase-->
       <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
@@ -1052,6 +1060,7 @@
           </div>
         </div>
       </article>
+
 
     <!-- VEINTE -->
     <!--Cambiar id por el numero de clase-->
@@ -1160,6 +1169,381 @@
         </div>
       </div>
     </article>
+
+
+  <!-- veinte y dos -->
+  <article id="veintedos" class="post style2">
+    <div class="image">
+      <img
+        src="images/2plano/index.jpg"
+        alt=""
+        width="70%"
+        height="159"
+        data-position="20% center"
+      />
+    </div>
+    <div class="content">
+      <div class="inner">
+        <header>
+          <!--Apuntar al html con el nombre de la clase-->
+          <h2>
+            <a href="sites/process 2 plano.html"
+              >Ubicación,GPS</a
+            >
+          </h2>
+          <!--Fecha de la clase-->
+          <p class="info">04 de enero de 2021</p>
+        </header>
+        <!--Pequeña descripcion del tema-->
+        <p align="justify">
+          El procesamiento de datos en segundo plano es una parte importante a
+          la hora de crear una aplicación que sea eficaz para los usuarios y
+          funcione de manera adecuada en la plataforma de Android.
+        </p>
+
+        <ul class="actions">
+          <!--Apuntar al html con el nombre de la clase-->
+          <li>
+            <a href="sites/process 2 plano.html" class="button alt"
+              >Leer mas</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="postnav">
+        <!--Poner el numero de id anterior-->
+        <a href="#diecinueve" class="scrolly prev"
+          ><span class="icon fa-chevron-up"></span
+        ></a>
+        <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+        <a href="#veinteuno" class="scrolly next"
+          ><span class="icon fa-chevron-down"></span
+        ></a>
+      </div>
+    </div>
+  </article>
+
+
+  <!-- veinte y tres -->
+
+  <article id="veintetres" class="post invert style1 alt">
+    <div class="image">
+      <img
+        src="images/estado/1.jpg"
+        alt=""
+        width="70"
+        height="100"
+        data-position="80% center"
+      />
+    </div>
+    <div class="content">
+      <div class="inner">
+        <header>
+          <!--Apuntar al html con el nombre de la clase-->
+          <h2>
+            <a href="sites/alarmasyestado.html">OsmDroid</a>
+          </h2>
+          <!--Fecha de la clase-->
+          <p class="info">4 de Enero de 2021</p>
+        </header>
+        <!--Pequeña descripcion del tema-->
+        <p align="justify">
+          Un dispositivo Android que está inactivo se suspende rápidamente.
+          Sin embargo, hay situaciones en las que una app necesita activar la
+          pantalla o la CPU y mantenerla encendida para completar algunas
+          tareas. Las alarmas ofrecen una manera de realizar operaciones
+          programadas fuera del ciclo de vida de tu app. Por ejemplo, puedes
+          usar una alarma a fin de comenzar una operación prolongada
+        </p>
+        <ul class="actions">
+          <!--Apuntar al html con el nombre de la clase-->
+          <li>
+            <a href="sites/alarmasyestado.html" class="button alt"
+              >Leer más</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="postnav">
+        <!--Poner el numero de id anterior-->
+        <a href="#veinte" class="scrolly prev"
+          ><span class="icon fa-chevron-up"></span
+        ></a>
+        <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+        <a href="" class="scrolly next"
+          ><span class="icon fa-chevron-down"></span
+        ></a>
+      </div>
+    </div>
+  </article>
+
+
+  <!-- veinte y cuatro -->
+  <article id="veintecuatro" class="post style2">
+    <div class="image">
+      <img
+        src="images/2plano/index.jpg"
+        alt=""
+        width="70%"
+        height="159"
+        data-position="20% center"
+      />
+    </div>
+    <div class="content">
+      <div class="inner">
+        <header>
+          <!--Apuntar al html con el nombre de la clase-->
+          <h2>
+            <a href="sites/process 2 plano.html"
+              >MapBox</a
+            >
+          </h2>
+          <!--Fecha de la clase-->
+          <p class="info">04 de enero de 2021</p>
+        </header>
+        <!--Pequeña descripcion del tema-->
+        <p align="justify">
+          El procesamiento de datos en segundo plano es una parte importante a
+          la hora de crear una aplicación que sea eficaz para los usuarios y
+          funcione de manera adecuada en la plataforma de Android.
+        </p>
+
+        <ul class="actions">
+          <!--Apuntar al html con el nombre de la clase-->
+          <li>
+            <a href="sites/process 2 plano.html" class="button alt"
+              >Leer mas</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="postnav">
+        <!--Poner el numero de id anterior-->
+        <a href="#diecinueve" class="scrolly prev"
+          ><span class="icon fa-chevron-up"></span
+        ></a>
+        <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+        <a href="#veinteuno" class="scrolly next"
+          ><span class="icon fa-chevron-down"></span
+        ></a>
+      </div>
+    </div>
+  </article>
+
+
+  <!-- veinte y cinco -->
+
+  <article id="veintecinco" class="post invert style1 alt">
+    <div class="image">
+      <img
+        src="images/estado/1.jpg"
+        alt=""
+        width="70"
+        height="100"
+        data-position="80% center"
+      />
+    </div>
+    <div class="content">
+      <div class="inner">
+        <header>
+          <!--Apuntar al html con el nombre de la clase-->
+          <h2>
+            <a href="sites/alarmasyestado.html">Google Maps</a>
+          </h2>
+          <!--Fecha de la clase-->
+          <p class="info">4 de Enero de 2021</p>
+        </header>
+        <!--Pequeña descripcion del tema-->
+        <p align="justify">
+          Un dispositivo Android que está inactivo se suspende rápidamente.
+          Sin embargo, hay situaciones en las que una app necesita activar la
+          pantalla o la CPU y mantenerla encendida para completar algunas
+          tareas. Las alarmas ofrecen una manera de realizar operaciones
+          programadas fuera del ciclo de vida de tu app. Por ejemplo, puedes
+          usar una alarma a fin de comenzar una operación prolongada
+        </p>
+        <ul class="actions">
+          <!--Apuntar al html con el nombre de la clase-->
+          <li>
+            <a href="sites/alarmasyestado.html" class="button alt"
+              >Leer más</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="postnav">
+        <!--Poner el numero de id anterior-->
+        <a href="#veinte" class="scrolly prev"
+          ><span class="icon fa-chevron-up"></span
+        ></a>
+        <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+        <a href="" class="scrolly next"
+          ><span class="icon fa-chevron-down"></span
+        ></a>
+      </div>
+    </div>
+  </article>
+
+
+  <!-- veinte y seis -->
+  <article id="veintecuatro" class="post style2">
+    <div class="image">
+      <img
+        src="images/2plano/index.jpg"
+        alt=""
+        width="70%"
+        height="159"
+        data-position="20% center"
+      />
+    </div>
+    <div class="content">
+      <div class="inner">
+        <header>
+          <!--Apuntar al html con el nombre de la clase-->
+          <h2>
+            <a href="sites/process 2 plano.html"
+              >Bluetooth</a
+            >
+          </h2>
+          <!--Fecha de la clase-->
+          <p class="info">04 de enero de 2021</p>
+        </header>
+        <!--Pequeña descripcion del tema-->
+        <p align="justify">
+          El procesamiento de datos en segundo plano es una parte importante a
+          la hora de crear una aplicación que sea eficaz para los usuarios y
+          funcione de manera adecuada en la plataforma de Android.
+        </p>
+
+        <ul class="actions">
+          <!--Apuntar al html con el nombre de la clase-->
+          <li>
+            <a href="sites/process 2 plano.html" class="button alt"
+              >Leer mas</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="postnav">
+        <!--Poner el numero de id anterior-->
+        <a href="#diecinueve" class="scrolly prev"
+          ><span class="icon fa-chevron-up"></span
+        ></a>
+        <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+        <a href="#veinteuno" class="scrolly next"
+          ><span class="icon fa-chevron-down"></span
+        ></a>
+      </div>
+    </div>
+  </article>
+
+  <!-- veinte y siete -->
+
+  <article id="veintecinco" class="post invert style1 alt">
+    <div class="image">
+      <img
+        src="images/estado/1.jpg"
+        alt=""
+        width="70"
+        height="100"
+        data-position="80% center"
+      />
+    </div>
+    <div class="content">
+      <div class="inner">
+        <header>
+          <!--Apuntar al html con el nombre de la clase-->
+          <h2>
+            <a href="sites/alarmasyestado.html">Touch-Screen</a>
+          </h2>
+          <!--Fecha de la clase-->
+          <p class="info">4 de Enero de 2021</p>
+        </header>
+        <!--Pequeña descripcion del tema-->
+        <p align="justify">
+          Un dispositivo Android que está inactivo se suspende rápidamente.
+          Sin embargo, hay situaciones en las que una app necesita activar la
+          pantalla o la CPU y mantenerla encendida para completar algunas
+          tareas. Las alarmas ofrecen una manera de realizar operaciones
+          programadas fuera del ciclo de vida de tu app. Por ejemplo, puedes
+          usar una alarma a fin de comenzar una operación prolongada
+        </p>
+        <ul class="actions">
+          <!--Apuntar al html con el nombre de la clase-->
+          <li>
+            <a href="sites/alarmasyestado.html" class="button alt"
+              >Leer más</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="postnav">
+        <!--Poner el numero de id anterior-->
+        <a href="#veinte" class="scrolly prev"
+          ><span class="icon fa-chevron-up"></span
+        ></a>
+        <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+        <a href="" class="scrolly next"
+          ><span class="icon fa-chevron-down"></span
+        ></a>
+      </div>
+    </div>
+  </article>
+
+
+
+  <!-- veinte y ocho -->
+  <article id="veintecuatro" class="post style2">
+    <div class="image">
+      <img
+        src="images/2plano/index.jpg"
+        alt=""
+        width="70%"
+        height="159"
+        data-position="20% center"
+      />
+    </div>
+    <div class="content">
+      <div class="inner">
+        <header>
+          <!--Apuntar al html con el nombre de la clase-->
+          <h2>
+            <a href="sites/process 2 plano.html"
+              >Sensores</a
+            >
+          </h2>
+          <!--Fecha de la clase-->
+          <p class="info">04 de enero de 2021</p>
+        </header>
+        <!--Pequeña descripcion del tema-->
+        <p align="justify">
+          El procesamiento de datos en segundo plano es una parte importante a
+          la hora de crear una aplicación que sea eficaz para los usuarios y
+          funcione de manera adecuada en la plataforma de Android.
+        </p>
+
+        <ul class="actions">
+          <!--Apuntar al html con el nombre de la clase-->
+          <li>
+            <a href="sites/process 2 plano.html" class="button alt"
+              >Leer mas</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="postnav">
+        <!--Poner el numero de id anterior-->
+        <a href="#diecinueve" class="scrolly prev"
+          ><span class="icon fa-chevron-up"></span
+        ></a>
+        <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+        <a href="#veinteuno" class="scrolly next"
+          ><span class="icon fa-chevron-down"></span
+        ></a>
+      </div>
+    </div>
+  </article>
+
 
     <!-- Footer -->
     <footer id="footer">
