--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@
   <article id="veintecinco" class="post invert style1 alt">
     <div class="image">
       <img
-        src="images/estado/1.jpg"
+        src="images/Googlemaps/gm2.jpg"
         alt=""
         width="70"
         height="100"
@@ -1348,24 +1348,23 @@
         <header>
           <!--Apuntar al html con el nombre de la clase-->
           <h2>
-            <a href="sites/alarmasyestado.html">Google Maps</a>
+            <a href="sites/googlemaps.html">Google Maps</a>
           </h2>
           <!--Fecha de la clase-->
-          <p class="info">4 de Enero de 2021</p>
+          <p class="info">11 de Enero de 2021</p>
         </header>
         <!--Pequeña descripcion del tema-->
         <p align="justify">
-          Un dispositivo Android que está inactivo se suspende rápidamente.
-          Sin embargo, hay situaciones en las que una app necesita activar la
-          pantalla o la CPU y mantenerla encendida para completar algunas
-          tareas. Las alarmas ofrecen una manera de realizar operaciones
-          programadas fuera del ciclo de vida de tu app. Por ejemplo, puedes
-          usar una alarma a fin de comenzar una operación prolongada
+        Google Maps es un servidor de aplicaciones de mapas en la web que pertenece a Alphabet Inc.
+        Ofrece imágenes de mapas desplazables, así como fotografías por satélite del mundo e incluso
+        la ruta entre diferentes ubicaciones o imágenes a pie de calle con Google Street View,
+        condiciones de tráfico en tiempo real (Google Traffic) y un calculador de rutas a pie, en coche,
+         bicicleta (beta) y transporte público y un navegador GPS, Google Maps Go.
         </p>
         <ul class="actions">
           <!--Apuntar al html con el nombre de la clase-->
           <li>
-            <a href="sites/alarmasyestado.html" class="button alt"
+            <a href="sites/googlemaps.html" class="button alt"
               >Leer más</a
             >
           </li>
