--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@
   <article id="veintecuatro" class="post style2">
     <div class="image">
       <img
-        src="images/2plano/index.jpg"
+        src="images/mapbox/mbox.jpeg"
         alt=""
         width="70%"
         height="159"
@@ -1299,19 +1299,17 @@
             >
           </h2>
           <!--Fecha de la clase-->
-          <p class="info">04 de enero de 2021</p>
+          <p class="info">11 de enero de 2021</p>
         </header>
         <!--Pequeña descripcion del tema-->
         <p align="justify">
-          El procesamiento de datos en segundo plano es una parte importante a
-          la hora de crear una aplicación que sea eficaz para los usuarios y
-          funcione de manera adecuada en la plataforma de Android.
+         Mapbox le proporciona mapas dinámicos, de alto rendimiento y personalizables que se adaptan a sus necesidades.
         </p>
 
         <ul class="actions">
           <!--Apuntar al html con el nombre de la clase-->
           <li>
-            <a href="sites/process 2 plano.html" class="button alt"
+            <a href="sites/mapbox.html" class="button alt"
               >Leer mas</a
             >
           </li>
@@ -1438,7 +1436,7 @@
 
   <!-- veinte y siete -->
 
-  <article id="veintecinco" class="post invert style1 alt">
+  <article id="veintesiete" class="post invert style1 alt">
     <div class="image">
       <img
         src="images/estado/1.jpg"
