--- a/sites/touchscreen.html
+++ b/sites/touchscreen.html
@@ -24,7 +24,7 @@
 
     <div>
       <a
-        href="./servicios.html"
+        href="touchscreen2.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
@@ -56,11 +56,12 @@
           <p class="info">18 de Enero de 2021</p>
         </header>
 					<!--Ingresar toda la informacion necesaria usando las diferentes etiquetas-->
-                    <ol>
-					<li><a href="process 2 plano.html"></a></li>
+                   <ol>
+					<li><a href="touchscreen1.html">Eventos Táctiles / Eventos de entrada</a></li>
 					
-                    <li><a href="segundoplano.html"></a></li>
-					<li><a href="desctransmisiones.html"></a></li><br></ol>
+                    <li><a href="touchscreen2.html">Controladores de eventos</a></li>
+					<li><a href="touchscreen.html">Seguimiento de los movimientos de tocar y del puntero</a></li>
+					<br></ol>
                     
 								<h3>Cómo hacer un seguimiento de los movimientos de tocar y del puntero</h3>	<br>
 						<p>Un nuevo objeto onTouchEvent() se activa con un evento ACTION_MOVE cada vez que cambia la posición, la presión o el tamaño del contacto táctil actual.</p><p>Debido a que el toque con el dedo no siempre es la forma más precisa de interacción, la detección de eventos táctiles a menudo se basa más en el movimiento que en el simple contacto. Para ayudar a las apps a distinguir entre los gestos basados en movimientos (como un deslizamiento) y los gestos sin movimiento (como un solo toque), Android incluye la noción de "margen táctil". El margen táctil se refiere a la distancia en píxeles en que el toque de un usuario puede oscilar antes de que se interprete el gesto como un gesto basado en movimiento.</p>
@@ -179,7 +180,7 @@
     </section>
     <div>
       <a
-        href="./servicios.html"
+        href="touchscreen2.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
