--- a/index.html
+++ b/index.html
@@ -1485,10 +1485,10 @@
 
 
   <!-- veinte y ocho -->
-  <article id="veintecuatro" class="post style2">
+  <article id="veinteocho" class="post style2">
     <div class="image">
       <img
-        src="images/2plano/index.jpg"
+        src="images/sensores/0.png"
         alt=""
         width="70%"
         height="159"
@@ -1500,24 +1500,23 @@
         <header>
           <!--Apuntar al html con el nombre de la clase-->
           <h2>
-            <a href="sites/process 2 plano.html"
+            <a href="sites/sensores.html"
               >Sensores</a
             >
           </h2>
           <!--Fecha de la clase-->
-          <p class="info">04 de enero de 2021</p>
+          <p class="info">21 de enero de 2021</p>
         </header>
         <!--Pequeña descripcion del tema-->
         <p align="justify">
-          El procesamiento de datos en segundo plano es una parte importante a
-          la hora de crear una aplicación que sea eficaz para los usuarios y
-          funcione de manera adecuada en la plataforma de Android.
+      Nuestro teléfono Android cuenta con una serie de sensores, que son indispensables para el buen funcionamiento del teléfono. Algunos de ellos son bastante conocidos para la mayoría.
+       Pero hay sensores que no son tan conocidos, o que no sabemos muy bien para qué sirven, qué función cumplen en el dispositivo en general. A continuación veremos en qué consisten los sensores y algunos ejemplos de ellos.
         </p>
 
         <ul class="actions">
           <!--Apuntar al html con el nombre de la clase-->
           <li>
-            <a href="sites/process 2 plano.html" class="button alt"
+            <a href="sites/sensores.html" class="button alt"
               >Leer mas</a
             >
           </li>
@@ -1525,11 +1524,11 @@
       </div>
       <div class="postnav">
         <!--Poner el numero de id anterior-->
-        <a href="#diecinueve" class="scrolly prev"
+        <a href="#veintesiete" class="scrolly prev"
           ><span class="icon fa-chevron-up"></span
         ></a>
         <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-        <a href="#veinteuno" class="scrolly next"
+        <a href="#uno" class="scrolly next"
           ><span class="icon fa-chevron-down"></span
         ></a>
       </div>
